Attempt to fix #3351